avance en botones del card

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,3 +7,12 @@
 #ancho_general{
     width: 1000px;
 }
+#corazon{
+    color: red;
+}
+#corazon2{
+    color: black;
+}
+#titles{
+    font-family: 'Press Start 2P', cursive;
+}
