cards de planetas listos

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,4 +1,4 @@
 body{
     background-color: black;
-    background-image: url("https://www.enjpg.com/img/2020/outer-space-background-7.jpg");
+    background-image: url("https://wallpaperaccess.com/full/2687969.jpg");
 }
