funciona detalle de personajes

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,3 +24,9 @@
     font-size: 80px;
     color: tomato;
 }
+#little_titles{
+    //font-family: 'Press Start 2P', cursive;
+    font-family: 'Permanent Marker', cursive;
+    font-size: 24px;
+    color: tomato;
+}
